<resources>
    <string name="app_name">KMyMoney for Droid</string>
    <string name="titleWelcome">Welcome</string>
    <string name="titleStartNew">Start a new KMyMoney database</string>
    <string name="titleOpenDatabase">Open a current KMyMoney database</string>
    <string name="titleOpenLastUsed">Open Last Used</string>
    <string name="summaryOpenLastUsed">Open last used file on return?</string>
    <string name="titleLastUsedFile">Last used file location.</string>
    <string name="summaryLastUsedFile">Location of the last used file</string>
    <string name="titleFileChooser">Choose a File</string>
    <string name="titleDatabaseName">Please enter a database name</string>
    <string name="titleButtonOK">OK</string>
    <string name="titleButtonCancel">Cancel</string>
    <string name="titleButtonEdit">Edit</string>
    <string name="titleButtonDelete">Delete</string>
    <string name="titleNewDatabase">New Database</string>
    <string name="titleHome">Home</string>
    <string name="titleLedger">Ledger</string>
    <string name="titleViewTransaction">Transaction</string>
    <string name="vtlabel_Description">Description:</string>
    <string name="vtlabel_Date">Date: </string>
    <string name="vtlabel_Status">Status: </string>
    <string name="vtlabel_Number">Number: </string>
    <string name="vtlabel_Amount">Amount: </string>
    <string name="vtlabel_Memo">Memo: </string>
    <string name="vtlabel_Splits">Categories</string>
    <string name="titlePrefs">Options</string>
    <string name="titleAccounts">Accounts</string>
    <string name="titleCategories">Categories</string>
    <string name="titlePayees">Payees</string>
    <string name="titleNew">New</string>
    <string name="titleEdit">Edit</string>
    <string name="titleDelete">Delete</string>
    <string name="titlePayeeTransactions">Payee Transactions</string>
    <string name="titleCreateModPayee">Create New Payee</string>
    <string name="titlePayeeDefaultAccount">Default Account</string>
    <string name="titlePayeeMatching">Matching</string>
    <string name="titlePayeeAddress">Address: </string>
    <string name="titlePayeePostalCode">Postal Code: </string>
    <string name="titlePayeeTelephone">Telephone: </string>
    <string name="titlePayeeEmail">Email: </string>
    <string name="titlePayeeNotes">Notes: </string>
    <string name="payeeMatching">Transaction Matching</string>
    <string name="payeeNoMatching">No matching</string>
    <string name="payeeMatchonName">Match on Payee name</string>
    <string name="titlePayeeUseDefault">Use the default account for this new 
    									transaction with this payee</string>
    <string name="titlePayeeDefaultCategory">Default category</string>
    <string name="titlePayeeDefaultIncome">Income</string>
    <string name="titlePayeeDefaultExpense">Expense</string>
    <string name="itemSave">Save</string>
    <string name="itemCancel">Cancel</string>
    <string name="itemClearAll">Clear All</string>
    <string name="summaryPayeeReassign">The transactions associated with the selected payee needs to be 
    	re-assigned to a different payee before the selected payee can be deleted. Please select
    	a payee from the list below.</string>
    <string name="titlePayeesAvailable">Available payees:</string>
    <string name="titleReassignPayee">Reassign Payee</string>
    <string name="delete">Delete</string>
    <string name="deletemsg">Are you sure you want to delete payee: </string>
    <string name="error">Error!</string>
    <string name="unableToReassign">Unable to reassign this Payee. Your payee was NOT deleted!</string>
	<string name="unableToDelete">Unable to delete your record for the following reason: </string>
	<string name="createNewPayee">Create a new payee</string>
	<string name="msgPayeeName">Payee name:</string>
	<string name="payeeNotFound">Payee not found!</string>
	<string name="payeeMoreThanOne">Somehow we found more than one payee.</string>
	<string name="menuOpen">Open</string>
	<string name="menuRecent">Recent</string>
	<string name="close">Close File</string>
	<string name="titleCreateModCategory">Create new category</string>
	<string name="titleCategoryGeneral">General Category</string>
	<string name="titleCategoryHierarchy">Category Hierarchy</string>
	<string name="titleCategoryName">Name: </string>
	<string name="titleOpeningInfo">Opening information</string>
	<string name="titleCategoryType">Type: </string>
	<string-array name="arrayTypes">
		<item>Income</item>
		<item>Expense</item>
	</string-array>
	<string name="titleCategoryCurrency">Currency: </string>
	<string name="titleCategoryDate">Date: </string>
	<string name="titleCategoryBalance">Balance: </string>
	<string name="titleCategoryOptions">Options</string>
	<string name="titleCategoryCheckNumber">Last check number: </string>
	<string name="titleCategoryNotes">Notes: </string>
	<string name="titleCategoryPriceEntry">Price entry: </string>
	<string name="titleSubAccount">This account is a sub-account of:</string>
	<string name="accountNameNotEntered">You must enter a name for this account!</string>
	<string name="categoryNotFound">Category not found!</string>
	<string name="titleCreateModAccount">New Account Setup</string>
	<string name="titleEditModAccount">Edit Account</string>
	<string name="titleNewInstitution">New Institution</string>
	<string name="titleInstitutionName">Name: </string>
	<string name="titleInstitutionStreet">Street: </string>
	<string name="titleInstitutionCity">City: </string>
	<string name="titleInstitutionPostalCode">Postal Code: </string>
	<string name="titleInstitutionPhone">Telephone/Fax: </string>
	<string name="titleInstitutionRoutingNumber">Routing Number: </string>
	<string name="titleInstitutionBIC">BIC: </string>
	<string name="titleAccountInstructions">If this account is managed by an institution please select
		the institution from the list. If the institution does not exist yet, please choose the New
		Institution button to create it. Otherwise, check the box below to create an account with out an
		institution. Enter the account number used by the institution to identify the account.
	</string>
	<string name="titleNoInstitution">No institution</string>
	<string name="titleAccountInstitution">Institution</string>
	<string name="buttonNewInstitution">New Institution</string>
	<string name="titleAccountNumber">Account number</string>
	<string name="titleAccountIBAN">IBAN</string>
	<string name="titleAccountInstructions2">Enter the name of the account under which it is known within
		KMyMoney. Select the type for the new account. Enter the date the account was opened and its
		currency.
	</string>
	<string name="titleAccountName">Account name</string>
	<string name="titleAccountType">Account type</string>
	<string name="titleAccountCurrency">Currency</string>
	<string name="buttonSetDate">Set Date</string>
	<string name="titleAccountOpenDate">Opening date</string>
	<string name="titleAccountOpenBalance">Opening balance</string>
	<string name="titleAccountPreferred">Preferred account</string>
	<string name="titleAccountSubAccount">Subaccount of</string>
	<string name="titleAccountTransactions">Total Transactions: </string>
	<string name="titleCreateAccounts">Create Accounts</string>
	<string name="titleCreateAccountInstitution">Create Institution</string>
	<string name="titleCreateAccountAccount">Create Account</string>
	<string name="titleCreateAccountParent">Create Parent</string>
	<string-array name="arrayAccountTypes">
		<item>Asset</item>
		<item>Checking</item>
		<item>Equity</item>
		<item>Liability</item>
		<item>Savings</item>
	</string-array>
	<string name="titleCreateModifyInstitution">Create Institution</string>
	<string name="accountNotSupported">Currently this account type is not able to be edited in KMM for Droid. It will be add
		eventually. We apologize for the limitation right now. Thanks for understanding.</string>
	<string name="titleInstitutions">Institutions</string>
	<string name="titleCreateModifyTransactions">New Transaction</string>
	<string-array name="TransactionTypes">
		<item>Deposit</item>
		<item>Transfer</item>
		<item>Withdrawal</item>
	</string-array>
	<string name="titleTransactionType">Transaction Type: </string>
	<string name="titlePayeeToFrom">Pay to: </string>
	<string name="titleCategory">Category: </string>
	<string name="titleNumber">Number: </string>
	<string name="titleDate">Date: </string>
	<string name="titleAmount">Amount: </string>
	<string name="notreconciled">Not reconciled</string>
	<string name="cleared">Cleared</string>
	<string name="reconciled">Reconciled</string>
	<string-array name="TransactionStatus">
		<item>@string/notreconciled</item>
		<item>@string/cleared</item>
		<item>@string/reconciled</item>
	</string-array>
	<string name="titleStatus">Status: </string>
	<string name="buttonSplit">Splits</string>
	<string name="titleMemo">Memo: </string>
	<string name="buttonChooseCategory">Choose a category</string>
	<string name="titleDeleteTransaction">Do you really want to delete this transaction?</string>
	<string name="titleSumofSplits">Sum of splits: </string>
	<string name="titleUnassigned">Unassigned: </string>
	<string name="titleTransactionAmount">Transaction amount: </string>
	<string name="titleCreateModifySplits">Splits</string>
	<string name="itemInsertRow">New Split</string>
	<string name="splitTransaction">- Split Transaction -</string>
	<string name="titleAbout">About</string>
	<string name="itemVersion">Version: </string>
	<string name="itemFileVersion">File Version: </string>
	<string name="itemFileCreated">Created: </string>
	<string name="itemLastModified">Last modified:</string>
	<string name="itemNumInstitutions"># of Institutions: </string>
	<string name="itemNumAccounts"># of Accounts: </string>
	<string name="itemNumPayees"># of Payees: </string>
	<string name="itemNumTransactions"># of Transactions: </string>
	<string name="itemNumSplits"># of Splits: </string>
	<string name="itemNumSecurities"># of Securities: </string>
	<string name="itemNumPrices"># of Prices: </string>
	<string name="itemNumCurrencies"># of Currencies: </string>
	<string name="itemNumSchedules"># of Schedules: </string>
	<string name="itemNumReports"># of Reports: </string>
	<string name="itemNumKVPS"># of KVPS: </string>
	<string name="itemNumBudgets"># of Budgets: </string>
	<string name="splitsNotBalanced">Your transaction is not balanced! If you would like to make the transaction amount equal your splits
		total press "OK". Press "Cancel" to go back and edit your splits.</string>
	<string name="titleSchedules">Schedules</string>
	<string name="titlePreferenceHomeWidget">Home Widget</string>
	<string name="titleUpdateFrequency">Update frequence</string>
	<string name="summaryFrequency">Choose an update frequency</string>
	<string name="titleSelectanAccount">Select an Account</string>
	<string name="titleChooseFrequency">Choose a frequency</string>
	<string name="titleDisplayFrequency">Display Frequency</string>
	<string name="summaryDisplayFrequency">Number of weeks to display</string>
	<string name="titlePreferenceNotifications">Notifications</string>
	<string name="titleScheduleNotifications">Receive notifications</string>
	<string name="summaryScheduleNotifications">Do you want to receive notifications of schedules due?</string>
	<string name="titlePreferenceOverDueSchedules">Over due schedules</string>
	<string name="titlePreferencesDueTodaySchedules">Schedules due today</string>
	<string name="titlePreferenceTimeToRun">Time to run</string>
	<string name="summaryPreferenceTimeToRun">When do you wish to be reminded?</string>
    <string name="titleSyncAll">All</string>
    <string name="titleSyncDropbox">Dropbox</string>
    <string name="titleSync">Sync</string>
    <string name="buttonOneMonth">One month</string>
    <string name="buttonOneYear">One year</string>
    <string name="buttonAll">All</string>
    <string name="titleReports">Reports</string>
</resources>