<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
    	android:summary="@string/summaryOpenLastUsed"
    	android:key="openLastUsed"
    	android:title="@string/titleOpenLastUsed">
    </CheckBoxPreference><PreferenceCategory 
        android:title="@string/titlePreferenceHomeWidget">
			<ListPreference 
			    android:key="accountUsed"
			    android:title="Account to use for schedules"
			    android:dialogTitle="@string/titleSelectanAccount">
    		</ListPreference>
    		<ListPreference
    		    android:title="@string/titleUpdateFrequency"
    		    android:key="updateFrequency"
    		    android:summary="@string/summaryFrequency"
    		    android:entries="@array/UpdateFrequency"
    		    android:entryValues="@array/UpdateFreqValues" 
    		    android:dialogTitle="@string/titleChooseFrequency">    
    		</ListPreference>
    		<ListPreference 
    		    android:key="displayWeeks" 
    		    android:title="@string/titleDisplayFrequency" 
    		    android:summary="@string/summaryDisplayFrequency" 
    		    android:entries="@array/WeeksToDisplay" 
    		    android:entryValues="@array/WeeksToDisplayValues"/>
    		
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/titlePreferenceNotifications">
        <CheckBoxPreference android:key="receiveNotifications" android:title="@string/titleScheduleNotifications" android:summary="@string/summaryScheduleNotifications"/>
        <CheckBoxPreference android:title="@string/titlePreferenceOverDueSchedules" android:key="overdueSchedules" android:dependency="receiveNotifications"/>
        <CheckBoxPreference android:title="@string/titlePreferencesDueTodaySchedules" android:key="dueTodaySchedules" android:dependency="receiveNotifications"/>
        <Preference android:title="@string/titlePreferenceTimeToRun" android:summary="@string/summaryPreferenceTimeToRun" android:key="timetoRun" android:dependency="receiveNotifications"/>
    </PreferenceCategory>    
</PreferenceScreen>