<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:title="@string/titleNew" android:id="@+id/itemNew" android:icon="@android:drawable/ic_menu_add"></item>
    <item android:title="@string/titleEdit" android:id="@+id/itemEdit" android:icon="@android:drawable/ic_menu_edit"></item>
    <item android:title="@string/titleDelete" android:id="@+id/itemDelete" android:icon="@android:drawable/ic_menu_delete"></item><item android:title="@string/titlePrefs" android:icon="@android:drawable/ic_menu_preferences" android:id="@+id/itemPrefs"></item>
    <item android:title="@string/titleHome" android:id="@+id/itemHome" android:icon="@drawable/home_view"></item>
    <item android:title="@string/titleCategories" android:id="@+id/itemCategories" android:icon="@drawable/categories_view"></item>
    <item android:title="@string/titlePayees" android:id="@+id/itemPayees" android:icon="@drawable/payees_view"></item>
    
    
</menu>
