<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#62B1F6">
  
  	<ImageView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:background="@drawable/kmymoney"
  		android:id="@+id/about_kmmicon">
  	</ImageView>
  	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_toRightOf="@+id/about_kmmicon"
  		android:text="@string/app_name"
  		android:textColor="@android:color/black"
  		android:textStyle="bold"
  		android:gravity="center_horizontal"
  		android:id="@+id/aboutAppName">
  	</TextView>
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_toRightOf="@+id/about_kmmicon"
  		android:layout_below="@+id/aboutAppName"
  		android:text="@string/itemVersion"
  		android:textColor="@android:color/black"
  		android:gravity="center_horizontal"
  		android:id="@+id/aboutVerNumber">
  	</TextView>  
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/about_kmmicon"
  		android:text="@string/itemFileVersion"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutFileVersion">
  	</TextView>  
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutFileVersion"
  		android:text="@string/itemFileCreated"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutFileCreated">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutFileCreated"
  		android:text="@string/itemLastModified"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutLastModified">
  	</TextView>
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutLastModified"
  		android:text="@string/itemNumInstitutions"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumInstitutions">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumInstitutions"
  		android:text="@string/itemNumAccounts"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumAccounts">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumAccounts"
  		android:text="@string/itemNumPayees"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumPayees">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumPayees"
  		android:text="@string/itemNumTransactions"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumTransactions">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumTransactions"
  		android:text="@string/itemNumSplits"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumSplits">
  	</TextView>
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumSplits"
  		android:text="@string/itemNumSecurities"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumSecurities">
  	</TextView>  
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumSecurities"
  		android:text="@string/itemNumPrices"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumPrices">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumPrices"
  		android:text="@string/itemNumCurrencies"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumCurrencies">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumCurrencies"
  		android:text="@string/itemNumSchedules"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumSchedules">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumSchedules"
  		android:text="@string/itemNumReports"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumReports">
  	</TextView> 
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumReports"
  		android:text="@string/itemNumKVPS"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumKVPS">
  	</TextView>
   	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/aboutNumKVPS"
  		android:text="@string/itemNumBudgets"
  		android:textColor="@android:color/black"
  		android:id="@+id/aboutNumBudgets">
  	</TextView>  
</RelativeLayout>
