<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
<RelativeLayout
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#62B1F6">

    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="left"
    	android:background="@drawable/titlelabel_background"
    	android:text="@string/titleCreateModifyTransactions"
    	android:id="@+id/titleCreateModifyTransactions"
    	android:textSize="25sp"
    	android:gravity="center_vertical"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/titleCreateModifyTransactions"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleTransactionType"
    	android:id="@+id/titleTransactionType"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
    <Spinner 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent"
    	android:layout_below="@id/titleCreateModifyTransactions"
    	android:layout_toRightOf="@id/titleTransactionType"
    	android:id="@+id/transactionType"
    />
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/transactionType"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titlePayeeToFrom"
    	android:id="@+id/titlePayeeToFrom"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
    <Spinner 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent"
    	android:layout_below="@id/transactionType"
    	android:layout_toRightOf="@id/titlePayeeToFrom"
    	android:id="@+id/payee"
    />
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/payee"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleCategory"
    	android:id="@+id/titleCategory"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
	<EditText 
		android:layout_width="165sp"
		android:layout_height="wrap_content"
		android:layout_below="@+id/payee"
		android:layout_toRightOf="@+id/titleCategory"
		android:id="@+id/editCategory"
	/>
    <Spinner 
    	android:layout_height="wrap_content" 
    	android:layout_width="165sp"
    	android:layout_below="@id/editCategory"
    	android:layout_toRightOf="@id/titleCategory"
    	android:id="@+id/category"
    	android:visibility="invisible"
    />
    <Button
    	android:layout_height="wrap_content"
    	android:layout_width="165sp"
    	android:layout_below="@id/editCategory"
    	android:layout_toRightOf="@id/titleCategory"
    	android:text="@string/buttonChooseCategory"
    	android:id="@+id/buttonChooseCategory"
    />
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/payee"
		android:layout_toRightOf="@id/editCategory"
    	android:width="55sp"
		android:text="@string/buttonSplit"	
		android:id="@+id/buttonSplit"
	/>
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/buttonChooseCategory"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleNumber"
    	android:id="@+id/titleNumber"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/category"
		android:layout_toRightOf="@+id/titleNumber"
		android:id="@+id/checkNumber"
	/>
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/checkNumber"
		android:text="@string/buttonSetDate"	
		android:id="@+id/buttonSetDate"
	/>
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/buttonSetDate"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleDate"
    	android:id="@+id/titleDate"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/buttonSetDate"
		android:layout_toRightOf="@+id/titleDate"
		android:id="@+id/date"
	/>
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/date"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleAmount"
    	android:id="@+id/titleAmount"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/date"
		android:layout_toRightOf="@+id/titleAmount"
		android:inputType="numberSigned|numberDecimal"
		android:id="@+id/amount"
	/>
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/amount"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleStatus"
    	android:id="@+id/titleStatus"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
    <Spinner 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent"
    	android:layout_below="@id/amount"
    	android:layout_toRightOf="@id/titleStatus"
    	android:id="@+id/status"
    />
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/status"
    	android:width="100sp"
    	android:gravity="center_vertical"
    	android:text="@string/titleMemo"
    	android:id="@+id/titleMemo"
    	android:textSize="15sp"
    	android:textColor="@android:color/white"
    	android:paddingLeft="10sp"
    />
	<EditText 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/status"
		android:layout_toRightOf="@+id/titleMemo"
		android:id="@+id/memo"
		android:inputType="textMultiLine"
		android:gravity="top"
		android:height="75sp"
	/>
</RelativeLayout>
</ScrollView>